--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_storage: ^10.3.7
   connectivity_plus: ^2.3.6+1
   internet_connection_checker: ^0.0.1+4
+  flutter_background_service: ^2.1.3
+  flutter_background_service_android: ^2.0.3
 
 dev_dependencies:
   flutter_test:
