--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   internet_connection_checker: ^0.0.1+4
   flutter_background_service: ^2.1.3
   flutter_background_service_android: ^2.0.3
+  fl_chart: ^0.55.1
 
 dev_dependencies:
   flutter_test:
