--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   image_picker: ^0.8.5+3
   path_provider: ^2.0.11
   openapi:
-    path: ../api
+    path: ../nx_flutter_app/api
   signature: ^5.2.1
   cupertino_icons: ^1.0.2
   mask_text_input_formatter: ^2.4.0
